# RAGDM

./: .env.example  .gitignore  Dockerfile.backend  Makefile  README.md  docker-compose.yml
.github/workflows/: c-linter.yml  lint-c.yml  lint-go.yml  lint-python.yml  lint.yml  С-lint.yml
algorithm/: .clang-format  .clang-tidy  CMakeLists.txt
algorithm/include/: algorithm.h
algorithm/src/: algorithm.c
algorithm/tests/: .clang-tidy  test_algorithm.c  test_algorithm.cpp
backend/: Dockerfile  go.mod  go.sum  sqlc.yaml
backend/cmd/: main.go
backend/cmd/server/: main.go
backend/internal/algorithm/: sm2.go
backend/internal/config/: config.go
backend/internal/domain/: card.go  contract.go  errors.go
backend/internal/http/: handlers.go  response.go  router.go
backend/internal/repository/: db.go  migrations.go  postgres_card.go
backend/internal/repository/migrations/: 20260331233522_init_schema.sql
backend/internal/service/: card_service.go
backend/internal/tokenizer/: embedder.go
backend/queries/: query.sql
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  main.js
frontend/pages/: search.html  trainer.html
parser/: export_model.py  main.py  parser.py  pyproject.toml  requirements.txt
parser/extractors/: __init__.py  pdf_extractor.py
parser/generators/: __init__.py  sql_generator.py
parser/nlp/: __init__.py  keyword_extractor.py  processor.py  text_processor.py
